# DirectX-Learning

./: Cargo.toml  README.md
crates/directx_fugue/: Cargo.toml
crates/windows-rs-sample-direct3d12/: Cargo.toml
crates/windows-rs-sample-direct3d12-improved/: Cargo.toml  readme.md
crates/windows-rs-sample-direct3d12-improved-transparent/: Cargo.toml
crates/windows-rs-sample-direct3d12-improved-transparent-v1-failing/: Cargo.toml
crates/windows-rs-sample-direct3d12-improved-transparent-v2/: Cargo.toml
crates/windows-rs-sample-direct3d12-improved-transparent/src/: adapter_utils.rs  dx_sample.rs  main.rs  sample_runner.rs
crates/windows-rs-sample-direct3d12-improved-transparent/src/d3d12_hello_triangle_buffered/: compile_shader.rs  create_device.rs  create_pipeline_state.rs  create_root_signature.rs  create_vertex_buffer.rs  mod.rs  move_to_next_frame.rs  populate_command_list.rs  resources.rs  sample.rs  sample_bind_to_window.rs  sample_new.rs  sample_on_destroy.rs  sample_render.rs  transition_barrier.rs  wait_for_gpu.rs  wait_for_gpu_idle.rs
crates/windows-rs-sample-direct3d12-improved-v1/: Cargo.toml
crates/windows-rs-sample-direct3d12-improved-v2/: Cargo.toml  readme.md
crates/windows-rs-sample-direct3d12-improved-v3/: Cargo.toml
crates/windows-rs-sample-direct3d12-improved-v4/: Cargo.toml  notes.md  readme.md
crates/windows-rs-sample-direct3d12-improved-v5/: Cargo.toml
crates/windows-rs-sample-direct3d12-improved-v6/: Cargo.toml  README.md  bevy-issue.md
crates/windows-rs-sample-direct3d12-improved-v6/resources/: app.manifest
crates/windows-rs-sample-direct3d12-improved-v6/src/: logging_init.rs  main.rs  shaders.hlsl
crates/windows-rs-sample-direct3d12-improved-v6/src/cli/: mod.rs
crates/windows-rs-sample-direct3d12-improved-v6/src/cli/window/show/: mod.rs
crates/windows-rs-sample-direct3d12-improved-v6/src/graphics/: mod.rs
crates/windows-rs-sample-direct3d12-improved-v7/: Cargo.toml  README.md  build.rs  chat.md  perplexity.md  tearing.md
(+43 files in other folders)
