[package]
name = "sample_direct3d12_improved_transparent"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
color-eyre = "0.6.3"
eyre = "0.6.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.windows]
version = "0.61.1"
default-features = false
features = [
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
]
